first content, ready to go

--- a/index.html
+++ b/index.html
@@ -482,15 +482,14 @@
 
         <div class="home-input-current d-flex justify-content-between">
           <div class="current d-flex flex-column ">
-            <p class="desc">Mining Output MDX<span class="textEn">(HECO&amp;BSC)</span>
-            </p>
+            <p class="desc">Mining Output MDX<span class="textEn">(HECO&amp;BSC)</span></p>
             <p class="amount">
               <span>659,820,291.90</span></p></div>
           <div class="current2 current d-flex flex-column">
-            <p class="desc">Mining Output Value<span class="textEn">(HECO&amp;BSC)</span>
-            </p>
+            <p class="desc">Mining Output Value<span class="textEn">(HECO&amp;BSC)</span></p>
             <p class="amount"> $<span>1,105,513,510.58</span>
-            </p></div>
+            </p>
+          </div>
         </div>
 
         <div class="home-count-wrap">
