--- a/index.html
+++ b/index.html
@@ -256,11 +256,11 @@
     <div class="home-assets">
       <div class="container container-color">
 
-        <div class="home-assets-amount d-flex align-items-center justify-content-center">
-          <span class="amount-icon"></span>
-          <span class="text">Total Value Locked</span>
-          <span class="amount-number">2,576,778,101.66</span>
-          <span class="amount-unit">USDT</span>
+        <div class="home-assets-amount d-flex flex-wrap align-items-center justify-content-center">
+            <span class="amount-icon order-lg-1 order-md-1 order-sm-1 order-1"></span>
+            <span class="text order-lg-2 order-md-2 order-sm-2 order-2">Total Value Locked</span>
+            <span class="amount-number order-lg-3 order-md-4 order-sm-4 order-4">2,576,778,101.66</span>
+            <span class="amount-unit order-lg-4 order-md-3 order-sm-3 order-3">(USDT)</span>
         </div>
 
         <div class="home-info-pc d-flex align-items-center justify-content-center">
@@ -485,174 +485,7 @@
           </div>
         </div>
 
-
-        <!--<div class="home-input-wrap d-flex justify-content-between">-->
-          <!--<div class="input-wrap text">-->
-            <!--<header class="board header-img bg-success">-->
-              <!--<div class="name-icom d-flex align-items-center">-->
-                <!--<img src="img/icon/home-page/home-assets/boardroom.png" class="icon-img">-->
-                <!--<span class=" text font-weight-bold">Boardroom</span>-->
-              <!--</div>-->
-
-              <!--<a href="#" class="text-white"> More-->
-                <!--<img src="img/icon/home-page/home-assets/arrow-right.png" class="icon-img">-->
-              <!--</a>-->
-            <!--</header>-->
-            <!--<table border="0" cellpadding="0" cellspacing="0">-->
-              <!--<thead>-->
-              <!--<th class="al text-left text-dark">LP</th>-->
-              <!--<th class="jar">Earned</th>-->
-              <!--<th class="ar text-dark">APY</th>-->
-              <!--<th class="operation">Action</th>-->
-              <!--</thead>-->
-              <!--<tbody>-->
-              <!--<tr>-->
-                <!--<td class="al text-left text-dark">MDX</td>-->
-                <!--<td class="textEn">cow&amp;mdx</td>-->
-                <!--<td class="art text-success"><span>35.99</span>%-->
-                <!--</td>-->
-                <!--<td class="operation-ar">-->
-                  <!--<div class="oper-buttons d-flex justify-content-around align-items-center">-->
-                    <!--<a href="#">Stake</a>-->
-                    <!--<span>|</span>-->
-                    <!--<a href="#" target="_blank">Trade</a>-->
-                  <!--</div>-->
-                <!--</td>-->
-              <!--</tr>-->
-              <!--<tr>-->
-                <!--<td class="al text-left text-dark">MDX</td>-->
-                <!--<td class="textEn">WHT</td>-->
-                <!--<td class="art text-success"><span>34.37</span>%-->
-                <!--</td>-->
-                <!--<td class="operation-ar">-->
-                  <!--<div class="oper-buttons d-flex justify-content-around align-items-center">-->
-                    <!--<a href="#">Stake</a>-->
-                    <!--<span>|</span>-->
-                    <!--<a href="#" target="_blank">Trade</a>-->
-                  <!--</div>-->
-                <!--</td>-->
-              <!--</tr>-->
-              <!--<tr>-->
-                <!--<td class="al text-left text-dark">MDX</td>-->
-                <!--<td class="textEn">MDX</td>-->
-                <!--<td class="art text-success"><span>314.19</span>%-->
-                <!--</td>-->
-                <!--<td class="operation-ar">-->
-                  <!--<div class="oper-buttons d-flex justify-content-around align-items-center">-->
-                    <!--<a href="#">Stake</a>-->
-                    <!--<span>|</span>-->
-                    <!--<a href="#" target="_blank">Trade</a>-->
-                  <!--</div>-->
-                <!--</td>-->
-              <!--</tr>-->
-              <!--<tr>-->
-                <!--<td class="al text-left text-dark">MDX</td>-->
-                <!--<td class="textEn">NT</td>-->
-                <!--<td class="art text-success"><span>0.03</span>%</td>-->
-                <!--<td class="operation-ar">-->
-                  <!--<div class="oper-buttons d-flex justify-content-around align-items-center">-->
-                    <!--<a href="#">Stake</a>-->
-                    <!--<span>|</span>-->
-                    <!--<a href="#" target="_blank">Trade</a>-->
-                  <!--</div>-->
-                <!--</td>-->
-              <!--</tr>-->
-              <!--</tbody>-->
-            <!--</table>-->
-          <!--</div>-->
-
-          <!--<div class="input-wrap text">-->
-            <!--<header class="liuq header-img bg-warning">-->
-              <!--<div class="name-icom d-flex align-items-center">-->
-                <!--<img src="img/icon/home-page/home-assets/liquidity.png" class="icon-img">-->
-                <!--<span class="text font-weight-bold">Liquidity</span>-->
-              <!--</div>-->
-              <!--<a href="#" class="text-white"> More-->
-                <!--<img src="img/icon/home-page/home-assets/arrow-right.png" class="icon-img">-->
-              <!--</a>-->
-            <!--</header>-->
-
-            <!--<table border="0" cellpadding="0" cellspacing="0">-->
-              <!--<thead>-->
-              <!--<th class="al text-left text-dark">LP</th>-->
-              <!--<th class="jar">Earned</th>-->
-              <!--<th class="ar text-dark">APR</th>-->
-              <!--<th class="operation">Action</th>-->
-              <!--</thead>-->
-              <!--<tbody>-->
-              <!--<tr>-->
-                <!--<td class="al text-left text-dark">NT/USDT</td>-->
-                <!--<td class="textEn">MDX</td>-->
-                <!--<td class="art text-success"><span>193.23</span>%-->
-                <!--</td>-->
-                <!--<td class="operation-ar">-->
-                  <!--<div class="oper-buttons d-flex justify-content-around align-items-center">-->
-                    <!--<a href="#">Stake</a>-->
-                    <!--<span>|</span>-->
-                    <!--<a href="#" target="_blank">Trade</a>-->
-                  <!--</div>-->
-                <!--</td>-->
-              <!--</tr>-->
-              <!--<tr>-->
-                <!--<td class="al text-left text-dark">DEP/HUSD</td>-->
-                <!--<td class="textEn">MDX</td>-->
-                <!--<td class="art text-success"><span>115.97</span>%-->
-                <!--</td>-->
-                <!--<td class="operation-ar">-->
-                  <!--<div class="oper-buttons d-flex justify-content-around align-items-center">-->
-                    <!--<a href="#">Stake</a>-->
-                    <!--<span>|</span>-->
-                    <!--<a href="#" target="_blank">Trade</a>-->
-                  <!--</div>-->
-                <!--</td>-->
-              <!--</tr>-->
-              <!--<tr>-->
-                <!--<td class="al text-left text-dark">HBELT/WHT</td>-->
-                <!--<td class="textEn">MDX</td>-->
-                <!--<td class="art text-success"><span>102.50</span>%-->
-                <!--</td>-->
-                <!--<td class="operation-ar">-->
-                  <!--<div class="oper-buttons d-flex justify-content-around align-items-center">-->
-                    <!--<a href="#">Stake</a>-->
-                    <!--<span>|</span>-->
-                    <!--<a href="#" target="_blank">Trade</a>-->
-                  <!--</div>-->
-                <!--</td>-->
-              <!--</tr>-->
-              <!--<tr>-->
-                <!--<td class="al text-left text-dark">WAR/USDT</td>-->
-                <!--<td class="textEn">MDX</td>-->
-                <!--<td class="art text-success"><span>86.99</span>%-->
-                <!--</td>-->
-                <!--<td class="operation-ar">-->
-                  <!--<div class="oper-buttons d-flex justify-content-around align-items-center">-->
-                    <!--<a href="#">Stake</a>-->
-                    <!--<span>|</span>-->
-                    <!--<a href="#" target="_blank">Trade</a>-->
-                  <!--</div>-->
-                <!--</td>-->
-              <!--</tr>-->
-              <!--</tbody>-->
-            <!--</table>-->
-          <!--</div>-->
-        <!--</div>-->
-
-        <!--<div class="home-input-current d-flex justify-content-between">-->
-          <!--<div class="current d-flex flex-column ">-->
-            <!--<p class="desc">Mining Output MDX<span class="textEn">(HECO&amp;BSC)</span></p>-->
-            <!--<p class="amount">-->
-              <!--<span>659,820,291.90</span>-->
-            <!--</p>-->
-          <!--</div>-->
-          <!--<div class="current2 current d-flex flex-column">-->
-            <!--<p class="desc">Mining Output Value<span class="textEn">(HECO&amp;BSC)</span></p>-->
-            <!--<p class="amount"> $<span>1,105,513,510.58</span>-->
-            <!--</p>-->
-          <!--</div>-->
-        <!--</div>-->
-
         <div class="home-input-current">
-
           <div class="row">
             <div class="col-xl-6 col-lg-12">
               <div class="current d-flex flex-column ">
