--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
       <div class="container container-color">
 
         <div class="home-assets-amount d-flex flex-wrap align-items-center justify-content-center">
-            <span class="amount-icon order-lg-1 order-md-1 order-sm-1 order-1"></span>
-            <span class="text order-lg-2 order-md-2 order-sm-2 order-2">Total Value Locked</span>
+            <span class="amount-icon order-1"></span>
+            <span class="text order-2">Total Value Locked</span>
             <span class="amount-number order-lg-3 order-md-4 order-sm-4 order-4">2,576,778,101.66</span>
-            <span class="amount-unit order-lg-4 order-md-3 order-sm-3 order-3">(USDT)</span>
+            <span class="amount-unit order-3">(USDT)</span>
         </div>
 
         <div class="home-info-pc d-flex align-items-center justify-content-center">
