--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
 
-    <header class="main-header">
+    <header class="main-header w-100">
 
-      <nav class="navbar justify-content-start fixed-top navbar-dark navbar-expand-xl">
+      <nav class="navbar justify-content-start navbar-dark navbar-expand-xl">
 
         <a href="#" class="burger-btn navbar-toggler" data-toggle="modal" data-target="#slidePanel">
           <img src="img/icon/header/burger-icon.png" alt="">
@@ -270,15 +270,16 @@
             <span class="hi-num">
               <span class="amount-numbercard-item-value text-dark">1,380,055,521.53</span>
             </span>
-            <span class="hi-name">USDT</span>
+            <span class="hi-name hi-currency">USDT</span>
           </div>
+          <div class="line"></div>
           <div class="h-info-item d-flex align-items-center">
             <img src="img/icon/h-info-item-2-icon.png" class="icon-img">
             <span class="hi-name">Current TVL</span>
             <span class="hi-num">
               <span class="amount-numbercard-item-value text-dark">1,196,722,580.13</span>
             </span>
-            <span class="hi-name">USDT</span>
+            <span class="hi-name hi-currency">USDT</span>
           </div>
         </div>
 
