fix some mobile

--- a/index.html
+++ b/index.html
@@ -299,9 +299,8 @@
             </div>
           </div>
           <div class="card-item">
-            <div class="card-item-key d-flex align-items-center">
-              <span>To be Repurchased</span>
-              <span class="textEn">(HECO&amp;BSC)</span>
+            <div class="card-item-key">
+              <span>To be Repurchased (HECO&amp;BSC)</span>
 
               <span class="tooltip-button" data-toggle="tooltip" data-placement="right" title="When the amount to be repurchased is less than 500WUSDT, the repurchase will be suspended for burning and destruction.">
                 <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
@@ -317,7 +316,7 @@
               <span>84,719,483.08</span></div>
           </div>
           <div class="card-item time">
-            <div class="card-item-key d-flex align-items-center">
+            <div class="card-item-key">
               <span>Halving Countdown</span>
               <span class="tooltip-button" data-toggle="tooltip" data-placement="right" title="Halving countdown is estimated time based on the height of the current block. As the halving time for each block varies, the specific time depends on the height of the block where the halving is going to occur.">
                 <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="">
