fix media home page

--- a/index.html
+++ b/index.html
@@ -513,6 +513,11 @@
               <div class="count d-flex justify-content-between">
                 <span class="desc"> Volume(24h)
                   <span class="textEn">(HECO&amp;BSC)</span>
+
+                  <span class="tooltip-button" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="HECO&amp;BSC">
+                    <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
+                  </span>
+
                 </span>
                   <span class="amount text-dark">
                   $<span>768,846,105.52</span>
@@ -523,6 +528,11 @@
               <div class="count d-flex justify-content-between">
                 <span class="desc">Fee(24h)
                 <span class="textEn">(HECO&amp;BSC)</span>
+
+                <span class="tooltip-button" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="HECO&amp;BSC">
+                  <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
+                </span>
+
               </span>
                 <span class="amount text-dark"> $
                 <span>2,306,538.32</span>
@@ -535,6 +545,11 @@
             <div class="col-xl-6 col-lg-12">
               <div class="count d-flex justify-content-between">
                 <span class="desc"> Boardroom Rewards
+
+                  <span class="tooltip-button" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="HECO&amp;BSC">
+                    <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
+                  </span>
+
                   <span class="textEn">(HECO&amp;BSC)</span>
                 </span>
                 <span class="amount text-dark">
@@ -545,6 +560,11 @@
             <div class="col-xl-6 col-lg-12">
               <div class="count last-count d-flex justify-content-between">
                 <span class="desc">Repurchase Amount
+
+                  <span class="tooltip-button" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="HECO&amp;BSC">
+                    <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
+                  </span>
+
                   <span class="textEn">(HECO&amp;BSC)</span>
                 </span>
                 <span class="amount text-dark"> $
