add bridge page

--- a/liquidity.html
+++ b/liquidity.html
@@ -214,6 +214,12 @@
     <section class="banner-bar">
       <div class="container">
 
+        <h1 class="banner-title text-center text-white">Earn MDX By Staking LP &amp; Tokens</h1>
+
+        <div class="text-center">
+          <p class="liquidity-mdx"> Current TVL <span>1,409,313,279.39</span>USDT</p>
+        </div>
+
       </div>
     </section>
 
@@ -255,8 +261,17 @@
             </li>
 
             <li>
+
+              <a class="buttonChange">
+                <button class="column2_search" value="0.0000">List Value</button>
+                <button class="column2_search" value="0.0001" style="display:none">Hide Value</button>
+              </a>
+
+            </li>
+
+            <li>
               <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search Mdex LP & Single Token" aria-label="">
+                <input type="text" id='myInput' class="form-control" placeholder="Search Mdex LP & Single Token" aria-label="">
                 <div class="input-group-append">
                   <span class="input-group-text">$</span>
                 </div>
