--- a/bridge.html
+++ b/bridge.html
@@ -87,7 +87,7 @@
       </nav>
     </header>
 
-    <!-- Slide-out-panel -->
+    <!-- Modal Slide-out-panel -->
     <div class="slide-out-panel modal fade" id="slidePanel" tabindex="-1" role="dialog" aria-labelledby="slidePanelLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-slideout modal-lg" role="document">
         <div class="modal-content">
@@ -173,6 +173,7 @@
         </div>
       </div>
     </div>
+    <!---->
 
     <!-- Modal Lang-->
     <div class="modal fade" id="modalLang" tabindex="-1"  aria-hidden="true">
@@ -209,6 +210,7 @@
         </div>
       </div>
     </div>
+    <!---->
 
     <section class="banner-bar">
       <div class="container-fluid">
@@ -513,9 +515,10 @@
         </div>
       </div>
     </div>
+    <!---->
 
     <!-- Modal --Choose the cross-chain bridge asset -->
-    <div class="modal modal-custom fade" id="assetModal" tabindex="-1" role="dialog" aria-labelledby="assetModalLabel" aria-hidden="true">
+    <div class="modal fade" id="assetModal" tabindex="-1" role="dialog" aria-labelledby="assetModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
 
@@ -584,8 +587,7 @@
         </div>
       </div>
     </div>
-
-
+    <!---->
 
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.1/js/jquery.dataTables.min.js"></script>
