fixed desktop bridge page

--- a/liquidity.html
+++ b/liquidity.html
@@ -179,9 +179,13 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
+
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
+              <span aria-hidden="true">
+                <img src="img/icon/close-modal-icon.png" class="close-icon">
+              </span>
             </button>
+
           </div>
           <div class="modal-body">
             <div class="select-language d-flex flex-wrap">
@@ -209,6 +213,7 @@
         </div>
       </div>
     </div>
+    <!---->
 
 
     <section class="banner-bar">
