--- a/index.html
+++ b/index.html
@@ -178,9 +178,13 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
+
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
+              <span aria-hidden="true">
+                <img src="img/icon/close-modal-icon.png" class="close-icon">
+              </span>
             </button>
+
           </div>
           <div class="modal-body">
             <div class="select-language d-flex flex-wrap">
@@ -208,6 +212,7 @@
         </div>
       </div>
     </div>
+    <!---->
 
     <div id="carouselExampleControls" class="main-slider carousel slide" data-ride="carousel">
     <div class="carousel-inner">
