--- a/bridge.html
+++ b/bridge.html
@@ -201,7 +201,7 @@
 </section>
 
 <section class="wind-mining-section">
-  <div class="conteiner-fluid">
+  <div class="container-fluid">
 
     <div class="wind-mining-content" id="main_bridge_window">
 
