fix table inputs

--- a/liquidity.html
+++ b/liquidity.html
@@ -251,14 +251,15 @@
 
             <li>
 
-              <div class="custom-control custom-switch">
+              <div class="custom-control custom-switch" data-toggle="tooltip" data-placement="top" title="Click to view the completed pools">
                 <input type="checkbox" class="custom-control-input" id="customSwitch1">
                 <label class="custom-control-label" for="customSwitch1">Processing</label>
+                <span class="tooltip-button">
+                  <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
+                </span>
               </div>
 
-              <span class="tooltip-button" data-toggle="tooltip" data-placement="right" title="When the amount to be repurchased is less than 500WUSDT, the repurchase will be suspended for burning and destruction.">
-                <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
-              </span>
+
 
             </li>
 
