--- a/liquidity.html
+++ b/liquidity.html
@@ -260,7 +260,7 @@
           <div class="filter-section">
 
               <ul class="sele-item">
-                <li class="se-item-name child-item active"><span> All </span></li>
+                <li class="se-item-name child-item all-filter active"><span> All </span></li>
                 <li class="se-item-name child-item usdt-filter" value="88"><span> USDT </span></li>
                 <li class="se-item-name child-item"><span> ETH </span></li>
                 <li class="se-item-name child-item"><span> MDX </span></li>
