fix filter/sorting table

--- a/liquidity.html
+++ b/liquidity.html
@@ -219,9 +219,9 @@
           <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false"> Innovation </a>
         </li>
 
-        <li>
+        <li class="switch-wrapper">
           <div class="custom-control custom-switch" data-toggle="tooltip" data-placement="top" title="Click to view the completed pools">
-            <input type="checkbox" class="custom-control-input" id="customSwitch1">
+            <input type="checkbox" class="custom-control-input" name="pos" value="0.00" id="customSwitch1">
             <label class="custom-control-label" for="customSwitch1">Processing</label> <span class="tooltip-button">
                   <img src="img/icon/home-page/home-assets/tooltip-icon.png" alt="" class="">
                 </span>
@@ -230,12 +230,12 @@
 
         <li>
           <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="customCheck1">
+            <input type="checkbox" class="custom-control-input" name="pos" value="88" id="customCheck1">
             <label class="custom-control-label" for="customCheck1">Staked only</label>
           </div>
         </li>
 
-        <li>
+        <li class="search-wrapper">
           <div class="input-group">
             <input type="text" id="searchTable" class="form-control" placeholder="Search Mdex LP & Single Token" aria-label="">
             <div class="input-group-append">
@@ -1184,7 +1184,7 @@
               <td rowspan="1" colspan="1" class="el-table_1_column_5">
                 <div class="cell">
                   <div class="apy-class">
-                    <span >22.98</span>%
+                    <span >0.00</span>%
                     <div class="topic" data-custom-class="tooltip-table" data-toggle="tooltip" data-html="true" title='<div class="tooltip-html"><p class="arp"><span>APR</span><span class="value">132.24%</span></p><p class="apy"><span>APY</span><span class="value">132.24%</span></p><p>Earn MDX By Staking LP & Tokens</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, consectetur adipisicing elit.</p></div>'>
                       <img src="img/icon/tooltip-green-icon.png" alt="">
                     </div>
